[tool.poetry]
name = "hbsc_utils"
version = "0.2.0"
description = "HBSC Python utils"
authors = ["Hairy Bear Social Club"]

[tool.poetry.dependencies]
python = "^3.8"
chia-blockchain = "1.3.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
